--- a/ShopEcomecre.Data/App.config
+++ b/ShopEcomecre.Data/App.config
@@ -2,7 +2,7 @@
 <configuration>
   <connectionStrings>
     <clear />
-    <add name="EcomecreConn" connectionString="Data Source=.;Initial Catalog=ShopEcomecre;Integrated Security=True; MultipleActiveResultSets=True" />
+    <add name="EcomecreConn" providerName="System.Data.SqlClient" connectionString="Data Source=.;Initial Catalog=Ecomecre;Integrated Security=True; MultipleActiveResultSets=True" />
   </connectionStrings>
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
